--- a/package.json
+++ b/package.json
@@ -26,11 +26,21 @@
     "@coreui/react": "^5.4.1",
     "@coreui/react-chartjs": "^3.0.0",
     "@coreui/utils": "^2.0.2",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@popperjs/core": "^2.11.8",
+    "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
     "chart.js": "^4.4.6",
     "classnames": "^2.5.1",
     "core-js": "^3.39.0",
+    "datatables.net-bs5": "^2.3.2",
+    "datatables.net-buttons": "^3.2.4",
+    "datatables.net-buttons-bs5": "^3.2.4",
+    "datatables.net-plugins": "^2.3.0",
+    "datatables.net-select": "^3.0.1",
+    "jszip": "^3.10.1",
+    "keycloak-js": "^26.2.0",
+    "pdfmake": "^0.2.20",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
