--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "react-scripts": "^5.0.1",
     "redux": "5.0.1",
     "simplebar-react": "^3.2.6",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.3",
