--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "redux": "5.0.1",
     "simplebar-react": "^3.2.6",
     "sqlite3": "^5.1.7",
-    "validator": "^13.15.15"
+    "validator": "^13.15.15",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.3",
