--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
     "datatables.net-buttons-bs5": "^3.2.4",
     "datatables.net-plugins": "^2.3.0",
     "datatables.net-select": "^3.0.1",
-    "express": "^5.1.0",
+    "express": "^5.2.1",
     "jszip": "^3.10.1",
     "keycloak-js": "^26.2.0",
-    "npm": "^10.8.2",
+    "npm": "^11.7.0",
     "pdfmake": "^0.2.20",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
@@ -52,7 +52,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^0.0.0",
     "redux": "5.0.1",
     "simplebar-react": "^3.2.6",
     "sqlite3": "^5.1.7",
@@ -71,5 +71,6 @@
     "prettier": "3.3.3",
     "sass": "^1.81.0",
     "vite": "^5.4.11"
-  }
+  },
+  "proxy": "http://localhost:8000"
 }
