--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "pdfmake": "^0.2.20",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-cookie": "^8.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-redux": "^9.1.2",
