--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "pdfmake": "^0.2.20",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-cookie": "^8.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-redux": "^9.1.2",
@@ -70,7 +71,6 @@
     "postcss": "^8.4.49",
     "prettier": "3.3.3",
     "sass": "^1.81.0",
-    "vite": "^5.4.11"
-  },
-  "proxy": "http://localhost:8000"
+    "vite": "^5.4.21"
+  }
 }
